[package]
name = "hotuniapp-server"
version = "0.1.0"
authors = ["Morgana <xly_tk@foxmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
serde_json = "1.0"
serde = { version = "1.0.114", features = ["derive"] }
qstring = "0.7"
sanitize-filename = "0.2"
actix-multipart = "0.2"
futures = "0.3"
bytes = "0.5"
actix-files = "0.2"
env_logger = "0.7"
log = "0.4"
chrono = "0.4"
fern = "0.5"
regex = "1.3"
tokio = { version = "0.2.6", features = ["fs"]}
lazy_static = "1.4"

[profile.release]
opt-level = 3
lto = true
